chore: add fizzbuzz unittest
