# docs/swagger.json
@@ -58,10 +58,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
+                            "type": "string"
                         }
                     }
                 }
@@ -81,7 +78,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.Statistics"
+                            "$ref": "#/definitions/domain.Statistics"
                         }
                     }
                 }
@@ -89,14 +86,13 @@
         }
     },
     "definitions": {
-        "dto.Statistics": {
+        "domain.Statistics": {
             "type": "object",
             "properties": {
                 "hits": {
                     "type": "integer"
                 },
                 "int1": {
-                    "description": "Int1  int    `form:\"int1\" json:\"int1\" binding:\"required,gte=1,lte=100,gtfield=Int2\"` /*  */",
                     "type": "integer"
                 },
                 "int2": {
